{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 17,
  "lineage": "1512b84d-b2c6-0538-522f-394c4deaa70b",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260428",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/zones/us-central1-a/disks/dev-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/popcorn-api-491915-s3/zones/us-central1-a/instances/dev-vm",
            "instance_id": "2634215179287495601",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "Q_3eMOEa8q8=",
            "metadata_startup_script": "#!/bin/bash\r\napt update\r\napt install -y docker.io\r\nsystemctl enable docker\r\nsystemctl start docker\r\n",
            "name": "dev-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.202.135",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/global/networks/dev-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/regions/us-central1/subnetworks/dev-subnet",
                "subnetwork_project": "popcorn-api-491915-s3"
              }
            ],
            "project": "popcorn-api-491915-s3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/zones/us-central1-a/instances/dev-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh"
            ],
            "tags_fingerprint": "5zt7uq67xS0=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-29T10:15:49.211-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/popcorn-api-491915-s3/global/firewalls/dev-allow-http",
            "log_config": [],
            "name": "dev-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/global/networks/dev-vpc",
            "priority": 1000,
            "project": "popcorn-api-491915-s3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/global/firewalls/dev-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-29T10:15:47.743-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/popcorn-api-491915-s3/global/firewalls/dev-allow-ssh",
            "log_config": [],
            "name": "dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/global/networks/dev-vpc",
            "priority": 1000,
            "project": "popcorn-api-491915-s3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/global/firewalls/dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/popcorn-api-491915-s3/global/networks/dev-vpc",
            "mtu": 0,
            "name": "dev-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "540854690517058114",
            "project": "popcorn-api-491915-s3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/global/networks/dev-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-29T10:15:47.865-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/popcorn-api-491915-s3/regions/us-central1/subnetworks/dev-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "dev-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "popcorn-api-491915-s3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/popcorn-api-491915-s3/regions/us-central1/subnetworks/dev-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}